- fix ts in models - add breed service - add breeds to router - make some changes in validationMiddleware
